<resources>
    <string name="app_name">Notes</string>
    <string name="category_ico">category_ico</string>
    <string name="new_note">Новая заметка</string>
    <string name="category">Category</string>
    <string name="sorting">Синхронизация</string>
    <string name="search">Search</string>
    <string name="edit_note">Изменить</string>
    <string name="delete_note">Удалить</string>
    <string name="fragment_navigation">My Notes</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="about">About</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Notes app © 2021 by MrFox</string>
    <string name="user_name">User name</string>
    <string name="user_account">test@mail.ru</string>
    <string name="settings">Настройки</string>
    <string name="note_list">Список заметок</string>
    <string name="description_color_text">Цвет заметки</string>
    <string name="description_title_text">Заголовок</string>
    <string name="description_date_text">Дата и время</string>
    <string name="description_text_text">Текст заметки</string>
    <string name="clear_all_notes">Удалить все</string>
    <string name="trash">Корзина</string>
    <string name="continue_">Продолжить</string>
    <string name="alert_dialog">Внимание!</string>
    <string name="alert_message">Вы действительно хотите удалить все заметки? \nПока корзина находится в разработке, восстановить их будет невозможно!</string>
    <string name="alert_button_positive">Ok</string>
    <string name="alert_button_negative">Отмена</string>
</resources>