<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_goto_note_list"
        android:icon="@drawable/ic_baseline_format_list_bulleted_24"
        android:title="@string/note_list" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings" />

    <item
        android:id="@+id/action_trash"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/trash" />

    <item
        android:id="@+id/action_generate_notes"
        android:icon="@android:drawable/ic_menu_add"
        android:title="Сгенерировать 5 заметок" />

    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_baseline_library_books_24"
        android:title="@string/about" />
</menu>