<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_new_note"
        android:icon="@drawable/ic_baseline_add_circle_24"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_sorting"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:orderInCategory="20"
        android:title="@string/sorting"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="5"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />
</menu>