<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="@dimen/nav_header_padding"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <TextView
        android:id="@+id/nav_header_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/nav_header_padding"
        android:text="@string/fragment_navigation"
        android:textSize="@dimen/nav_header_dimen"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/user_avatar"
        app:layout_constraintStart_toEndOf="@+id/user_avatar"
        app:layout_constraintTop_toTopOf="@+id/user_avatar" />

    <ImageView
        android:id="@+id/user_avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/nav_header_padding"
        app:layout_constraintBottom_toTopOf="@+id/user_name"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="@dimen/nav_header_padding"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toTopOf="@+id/user_account"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/user_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>